styles/globals.css
@import 'buttons.css';
@import 'forms.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-size: clamp(16px, 1.75vw, 20px);
  }

  h1,
  .h1 {
    @apply mb-6 text-3xl font-bold md:text-4xl;
  }

  h2,
  .h2 {
    @apply mb-4 text-xl font-bold;
  }

  h3,
  .h3 {
    @apply mb-1.5 text-lg font-bold;
  }

  .section-headline {
    @apply relative z-10 overflow-hidden px-2 text-center text-xs uppercase tracking-widest text-slate-300;

    &::before,
    &::after {
      content: '\a0';
      @apply absolute top-1/2 ml-2 h-0.5 w-1/2 -translate-y-1/2 overflow-hidden bg-slate-750;
    }

    &::before {
      margin-left: calc(-50% - 0.5rem);
      @apply text-right;
    }
  }

  strong {
    @apply font-bold;
  }

  small {
    @apply text-sm;
  }
}

@layer components {
  .container {
    @apply w-full max-w-2xl p-4 md:p-8;
  }

  .container-sm {
    @apply w-full max-w-xl p-4 md:p-8;
  }

  .container-fluid {
    @apply w-full p-4 md:p-8;
  }
}

@layer utilities {
  .scrollbar-hidden {
    scrollbar-width: none;
    &::-webkit-scrollbar {
      display: none;
    }
  }

  .text-vertical {
    writing-mode: vertical-rl;
    text-orientation: mixed;
  }

  .clip-rounded-t {
    clip-path: inset(0 0 0 0 round 5px 5px 0 0);
  }

  .break-words {
    overflow-wrap: anywhere;
    word-break: break-word;
  }
}

